--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_spinkit: ^5.1.0
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +64,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/DiscGo.png
+    - images/google.png
+    - images/google48.png
+    - images/disc_golf_course.png
+    - images/grimlab.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
