convex bottom appbar added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   device_preview: ^1.1.0
   card_swiper : ^2.0.1
   material_design_icons_flutter: 6.0.7096
+  convex_bottom_bar: ^3.2.0
 
 
 
