--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   card_swiper : ^2.0.1
   material_design_icons_flutter: 6.0.7096
   convex_bottom_bar: ^3.2.0
+  flutter_animated_button: ^2.0.3
 
 
 
